Show dropdown if amendments are present
* Was showing single button due to lack of check on Amendments
* Bonus fixes

--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -6,7 +6,7 @@
         >{{ boardTitle }}
       </h2>
     </div>
-    <div class="button-container">
+    <div>
       <ng-container *ngIf="boardHasPlanningReviews || boardHasAmendments || boardHasCovenant">
         <button mat-flat-button color="primary" [matMenuTriggerFor]="createMenu">+ New Card ▾</button>
         <mat-menu class="move-board-menu" xPosition="before" #createMenu="matMenu">
