--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
@@ -72,7 +72,7 @@
       </div>
       <div>
         <ng-container *ngIf="!!reconsideration.resultingDecision">
-          <div class="subheading2">Resolution of Resulting Decision</div>
+          <div class="subheading2">Resulting Resolution</div>
           #{{ reconsideration.resultingDecision?.resolutionNumber }}/{{
             reconsideration.resultingDecision?.resolutionYear
           }}
@@ -145,7 +145,7 @@
       </div>
       <div>
         <ng-container *ngIf="!!amendment.resultingDecision">
-          <div class="subheading2">Resolution of Resulting Decision</div>
+          <div class="subheading2">Resulting Resolution</div>
           #{{ amendment.resultingDecision?.resolutionNumber }}/{{ amendment.resultingDecision?.resolutionYear }}
         </ng-container>
       </div>
