--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -16,7 +16,7 @@
 .post-decision {
   margin: 24px 0;
   position: relative;
-  padding: 48px 32px 32px 32px;
+  padding: 32px;
   box-shadow: 0 2px 8px 1px rgba(0, 0, 0, 0.25);
 }
 
@@ -58,10 +58,10 @@ section {
   position: absolute;
   top: 0;
   right: 0;
-  height: 32px;
+  height: 36px;
 
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 0px 4px 0px 10px;
+  border-radius: 0 4px 0 10px;
 
   &.recon {
     background: $accent-color;
@@ -73,16 +73,16 @@ section {
 
   button {
     color: $white;
-    width: 32px;
-    height: 32px;
-    line-height: 32px;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
   }
 
   mat-icon {
-    font-size: 20px;
-    line-height: 32px;
+    font-size: 21px;
+    line-height: 36px;
     width: 20px;
-    height: 32px;
+    height: 36px;
   }
 }
 
